# labels

./: .gitignore  README.md  devenv.nix  label.py  pyproject.toml
icons/: README.md
